@@ -1,4 +1,6 @@
 ver 0.21.10 (not yet released)
+* output
+  - httpd: reject some well-known URIs
 * fix crash bug (0.21.9 regression)
 
 ver 0.21.9 (2019/05/20)
